apollo-federation/src/connectors/expand/tests/snapshots/api@product_interface.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/product_interface.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

interface Product {
  id: ID!
  name: String
  description: String
}

type Query {
  products: [Product]
}
