apollo-federation/src/connectors/expand/tests/snapshots/api@recursive_input.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/recursive_input.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

input AnInput {
  name: String
  child: AnInput
}

type Query {
  foo(input: AnInput): String
}
