apollo-federation/src/connectors/expand/tests/snapshots/api@this_first_v0_4.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/this_first_v0_4.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type Query {
  widgets: [Widget]
}

type Widget {
  id: ID!
  tagIds: [ID]
  firstTag: Tag
}

type Tag {
  id: ID
  label: String
}
