apollo-federation/src/connectors/expand/tests/snapshots/connectors@buggy_graphs_empty.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/buggy_graphs_empty.graphql
---
{}
