apollo-federation/src/connectors/expand/tests/snapshots/connectors@cache_tag_on_connector.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/cache_tag_on_connector.graphql
---
{
    "connectors_Query_users_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.users),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: Some(
            HttpJsonTransport {
                source_template: Some(
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "http://example",
                                    location: 0..14,
                                },
                            ),
                        ],
                    },
                ),
                connect_template: StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "/users",
                                location: 0..6,
                            },
                        ),
                    ],
                },
                method: Get,
                headers: [],
                body: None,
                source_path: None,
                source_query_params: None,
                connect_path: None,
                connect_query_params: None,
            },
        ),
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "id",
                                                    ),
                                                    range: Some(
                                                        0..2,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        2..2,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..2,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    0..2,
                                ),
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "name",
                                                    ),
                                                    range: Some(
                                                        3..7,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        7..7,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                3..7,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    3..7,
                                ),
                            },
                        },
                    ],
                    range: Some(
                        0..7,
                    ),
                },
            ),
            spec: V0_1,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        schema_subtypes_map: {
            "_Entity": {
                "Product",
                "User",
            },
        },
        request_headers: {},
        response_headers: {},
        request_variable_keys: {},
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        requires: [],
        output_type: Some(
            List(
                Named(
                    "User",
                ),
            ),
        ),
        label: Label(
            "connectors.example http: GET /users",
        ),
    },
    "connectors_Query_products_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.products),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: Some(
            HttpJsonTransport {
                source_template: Some(
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "http://example",
                                    location: 0..14,
                                },
                            ),
                        ],
                    },
                ),
                connect_template: StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "/products",
                                location: 0..9,
                            },
                        ),
                    ],
                },
                method: Get,
                headers: [],
                body: None,
                source_path: None,
                source_query_params: None,
                connect_path: None,
                connect_query_params: None,
            },
        ),
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "id",
                                                    ),
                                                    range: Some(
                                                        0..2,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        2..2,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..2,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    0..2,
                                ),
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "title",
                                                    ),
                                                    range: Some(
                                                        3..8,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        8..8,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                3..8,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    3..8,
                                ),
                            },
                        },
                    ],
                    range: Some(
                        0..8,
                    ),
                },
            ),
            spec: V0_1,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        schema_subtypes_map: {
            "_Entity": {
                "Product",
                "User",
            },
        },
        request_headers: {},
        response_headers: {},
        request_variable_keys: {},
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        requires: [],
        output_type: Some(
            List(
                Named(
                    "Product",
                ),
            ),
        ),
        label: Label(
            "connectors.example http: GET /products",
        ),
    },
}
